--- a/index.html
+++ b/index.html
@@ -8,67 +8,39 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="text-center">Where Should I Be Right Now?</h1>
-
-        <div class="form-group">
-            <label for="dayInput">Select Day (A-G):</label>
+    <header>
+      <div class="container">
+        <h1 class="text-center my-4">Kevins Class Schedule</h1>
+        <div class="form-group mb-4">
+          <label for="dayInput" class="form-label">Select Day (A-G):</label>
+          <div class="input-group">
             <input type="text" id="dayInput" class="form-control" placeholder="Enter a day (A-G)">
-            <button id="submitDay" class="btn btn-primary mt-2">Show Schedule</button>
+            <button id="submitDay" class="btn btn-primary">Show Schedule</button>
+          </div>
         </div>
-        <div class="schedule">
-            <h3 class="text-center">Your Schedule for the Day</h3>
-            <table class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                        <th>Period: 1</th>
-                        <th>Time: 7:30-8:37</th>
-                        <th>Class: AP Environmental Science</th>
-                        <th>Teacher: McQuade, Tara</th>
-                        <th>Room: B211</th>
-                    </tr>
-                    <tr>
-                        <th>Period: 2</th>
-                        <th>Time: 8:42-9:49</th>
-                        <th>Class: AP Environmental Science</th>
-                        <th>Teacher: McQuade, Tara</th>
-                        <th>Room: B211</th>
-                    </tr>
-                    <tr>
-                        <th>Period: 3</th>
-                        <th>Time: 9:54-11:01</th>
-                        <th>Class: Calculus</th>
-                        <th>Teacher: Blum, Jason</th>
-                        <th>Room: B202</th>
-                    </tr>
-                    <tr>
-                        <th>Period: Lunch</th>
-                        <th>Time: 11:06-11:41</th>
-                        <th>Class: Lunch</th>
-                        <th>Teacher: Lunch</th>
-                        <th>Room: Lunch Room</th>
-                    </tr>
-                    <tr>
-                        <th>Period: 4</th>
-                        <th>Time: 11:47-12:54</th>
-                        <th>Class: Fine Art 1</th>
-                        <th>Teacher: Finaldi, Daniel</th>
-                        <th>Room: B120</th>
-                    </tr>
-                    <tr>
-                        <th>Period: 5</th>
-                        <th>Time: 12:59-2:06</th>
-                        <th>Class: Honors NJIT IS219 Advanced Website Development W</th>
-                        <th>Teacher: McDonald, Ashley</th>
-                        <th>Room: C104</th>
-                    </tr>
-
-                </thead>
-                <tbody id="scheduleList"></tbody>
-            </table>
+        <div class="schedule mt-4">
+          <h3 class="text-center mb-3">Your Schedule for the Day</h3>
+          <table class="table table-bordered table-striped text-center">
+            <thead class="table-dark">
+              <tr>
+                <th>Period</th>
+                <th>Time</th>
+                <th>Class</th>
+                <th>Teacher</th>
+                <th>Room</th>
+              </tr>
+            </thead>
+            <tbody id="scheduleList">
+              <tr>
+                <td colspan="5" class="text-muted">A day? B day? Enter a day to see your schedule!</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script.js"></script>
-</body>
+      </div>
+    </header>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
